# widget

./: .env.example  .gitignore  README.md  pyproject.toml
htmlcov/: index.html
src/: category_sum.py  decorators.py  external_api.py  filtration.py  generators.py  masks.py  mine.py  processing.py  service.py  utils.py  widget.py
tests/: conftest.py  test_category_sum.py  test_decorators.py  test_external_api.py  test_filtration.py  test_generators.py  test_mask.py  test_mine.py  test_processing.py  test_utils.py  test_widget.py
